# CheapBananas

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.sqlx/: query-1a396f1e58b72accbf9499fc3fb3753352068843f66039ea21d86da7ee06b1b3.json  query-936743ed54f79c2833c246fd08f3dfff25a6a3beb21d633688dd22e65e953645.json  query-cf277b0b66968ca144585fecedc068da1212a2b5f2c8baab4d1485604e1046af.json  query-cfecf3bc4a35a8d0d2ffdff8402bbc9c2524abada274399c455abf8aae19fe8d.json  query-de4b6e91a850fa22fa40efd66b154260c7a86aaec3bdfab3f9923bd619fe1cf3.json
app/: globals.css  modes.ts  page.tsx  styles.ts  unitConversion.ts
app/compare/: page.tsx
components/: styledButton.tsx
cypress/e2e/: product.cy.ts  product_entry.cy.ts  shop.cy.ts
hooks/: fetchSuggestions.tsx
migrations/: 20230522_add_product_columns.sql  20230523_replace_shop_id_with_shop_name.sql
src/: app.rs  db.rs  lib.rs  main.rs  models.rs
src/utils/: text_utils.rs
tests/: db_tests.rs  http_routes.rs  product.rs  product_entry.rs  shop.rs
tests/common/: mod.rs
types/: types.ts
utils/: text_utils.ts
