[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# Add to Cargo.toml
[dependencies]
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
bigdecimal = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }